feat(agent): agent self update and scheduled updates
---------


bugfixes

Doc fixes
